new production build

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ pnpm-debug.log*
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+app/__pycache__/__init__.cpython-39.pyc
+app/__pycache__/endpoints.cpython-39.pyc
