--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ pnpm-debug.log*
 !.elasticbeanstalk/*.global.yml
 app/__pycache__/__init__.cpython-39.pyc
 app/__pycache__/endpoints.cpython-39.pyc
+/app/db.db
