ignore lidar_frame temp data

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ pnpm-debug.log*
 app/__pycache__/__init__.cpython-39.pyc
 app/__pycache__/endpoints.cpython-39.pyc
 /app/db.db
+/app/lidar_frame.json
