--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "core-js": "^3.8.3",
     "sass-loader": "^13.2.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-sse": "^2.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
